--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,32 @@ img {
 }
 
 .card-bg-image {
-    width: 326px;
-    height: 144px;
+    width: 20.375rem;
+    height: 9rem;
     background-image: url(./images/bg-pattern-card.svg);
     background-size: cover;
+    border-radius: 20px 20px 0 0;
 }
 
 .card-info {
     width: 100%;
     height: 14.125rem;
     background-color: #FFF;
+    border-radius: 0 0 20px 20px;
+}
+
+.profile-image {
+    display: flex;
+    justify-content: center;
+}
+
+.profile-image img {
+    width: 6rem;
+    height: 6rem;
+    border: 5px solid #FFF;
+    border-radius: 50%;
+    position: absolute;
+    top: 360px;
 }
 
 /* FOOTER */
