--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght,YOPQ@100..900,300&display=swap');
+
 *  {
    margin: 0;
    padding: 0;
@@ -20,6 +22,7 @@ img {
     background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat;
     background-position: right 50vw bottom 50vh, top 50vh left 50vw;
+    font-family: "Kumbh Sans", sans-serif;
 }
 
 /* CARD CONTAINER */
@@ -38,18 +41,40 @@ img {
 }
 
 .card-info {
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 14.125rem;
     background-color: #FFF;
     border-radius: 0 0 20px 20px;
 }
 
-.profile-image {
+.name-box {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 133px;
+    height: 49px;
+    border: 1px solid black;
+    margin-top: 70px;
 }
 
-.profile-image img {
+.name {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.name span {
+    font-weight: 400;
+}
+
+h2 {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.name-box img {
     width: 6rem;
     height: 6rem;
     border: 5px solid #FFF;
