--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ img {
 .card-container {
     width: 20.375rem;
     height: 23.375rem;
+    position: relative;
 }
 
 .card-bg-image {
@@ -42,6 +43,8 @@ img {
 
 .card-info {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     width: 100%;
     height: 14.125rem;
@@ -56,8 +59,8 @@ img {
     align-items: center;
     width: 133px;
     height: 49px;
-    border: 1px solid black;
-    margin-top: 70px;
+    /* border: 1px solid black; */
+    margin-top: 30px;
 }
 
 .name {
@@ -67,11 +70,13 @@ img {
 
 .name span {
     font-weight: 400;
+    color: gray;
 }
 
 h2 {
     font-size: 14px;
     font-weight: 400;
+    color: gray;
 }
 
 .name-box img {
@@ -80,15 +85,96 @@ h2 {
     border: 5px solid #FFF;
     border-radius: 50%;
     position: absolute;
-    top: 360px;
+    top: 90px;
+}
+
+.stat-box {
+    width: 326px;
+    height: 69px;
+    /* border: 1px solid black; */
+    margin-top: 24px;
+}
+
+ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-top: 25px;
+}
+
+ul li {
+    width: 56px;
+    height: 44px;
+    text-align: center;
+    list-style: none;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+li span {
+    font-size: 12px;
+    font-weight: 400;
+    color: gray;
+    letter-spacing: 1.5px;
 }
 
 /* FOOTER */
 
 .attribution { 
-    font-size: 0.688rem; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 40px;
+    font-size: 15px; 
     text-align: center; 
+    /* border: 1px solid black; */
+    margin-top: 15px;
 }
     
-.attribution a { 
-    color: hsl(228, 45%, 44%); }
+.attribution a {
+    margin-left: 5px;
+    /* color: hsl(228, 45%, 44%); */
+    animation-name: smoothFill;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes smoothFill {
+  00%,0%{
+    color: #ff0000;
+  }
+  8%{
+    color: #ff7f00;
+  }
+  16%{
+    color: #ffff00;
+  }
+  25%{
+    color: #7fff00;
+  }
+  33%{
+    color: #00ff00;
+  }
+  41%{
+    color: #00ff7f;
+  }
+  50%{
+    color: #00ffff;
+  }
+  58%{
+    color: #007fff;
+  }
+  66%{
+    color: #0000ff;
+  }
+  75%{
+    color: #7f00ff;
+  }
+  83%{
+    color: #ff00ff;
+  }
+  91%{
+    color: #ff007f;
+  }
+}
