--- a/styles.css
+++ b/styles.css
@@ -155,12 +155,24 @@ li span {
     }
 }
 
-@media (orientation: landscape) and (max-height: 500px) {
+@media (orientation: landscape) {
+
+  .canvas {
+    display: flex;
+    justify-content: flex-start;
+    background-color: hsl(185, 75%, 39%);
+    margin-top: 20px;
+  }
+
   .card-container {
-    min-width: 600px;
+    min-width: 324px;
     height: 50px;
-    margin-bottom: 40px;
     position: relative; 
+    margin-bottom: 40px;
+  }
+
+  div .card-bg-image {
+    background-image: url(./images/bg-pattern-card.svg);
   }
 }
 
