--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ li span {
 
 /* MEDIA QUERY FOR LANDSCAPE MOBILE */
 
-@media (orientation: landscape) and (max-height: 500px) {
+@media (orientation: landscape) and (min-height: 412px) {
 
   .canvas {
     display: flex;
