--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ li span {
 
 /* MEDIA QUERY FOR LANDSCAPE MOBILE */
 
-@media (orientation: landscape) and (min-height: 412px) {
+@media (orientation: landscape) and (max-height: 500px) {
 
   .canvas {
     display: flex;
@@ -167,14 +167,17 @@ li span {
   }
 
   .card-container {
-    min-width: 324px;
+    display: flex;
+    min-width: 500px;
     height: 50px;
-    position: relative; 
     margin-bottom: 40px;
   }
 
   div .card-bg-image {
+    height: 226px;
     background-image: url(./images/bg-pattern-card.svg);
+    position: relative; 
+    border-radius: 20px 0 0 20px;
   }
 }
 
