--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ li span {
     display: flex;
     min-width: 500px;
     height: 50px;
-    margin-bottom: 40px;
+    margin-top: 40px;
   }
 
   div .card-bg-image {
@@ -178,6 +178,10 @@ li span {
     background-image: url(./images/bg-pattern-card.svg);
     position: relative; 
     border-radius: 20px 0 0 20px;
+  }
+
+  .card-info {
+    border-radius: 0 20px 20px 0;
   }
 }
 
