--- a/styles.css
+++ b/styles.css
@@ -180,8 +180,26 @@ li span {
     border-radius: 20px 0 0 20px;
   }
 
+  .name-box {
+    /* margin-top: -15px; */
+    /* border: 1px solid black; */
+  }
+
+  .stat-box {
+    margin-top: 30px;
+    /* border: 1px solid black; */
+  }
+
   .card-info {
     border-radius: 0 20px 20px 0;
+  }
+
+  .name-box img {
+    position: absolute;
+    left: 40px;
+    right: 0;
+    bottom: 0;
+    top: 60px;
   }
 }
 
