--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@ img {
     transition-duration: 1s;
 }
 
+/*  */
+.canvas, .card-bg-image {
+  transition: none;
+}
+
 .card-info {
     display: flex;
     flex-direction: column;
@@ -141,7 +146,12 @@ li span {
 @media ( min-width: 768px) {
     .canvas {
         transition-duration: 1s;
+        transition: background-color 1s;
         background-color: rgb(139, 38, 38);
+    }
+
+    .card-bg-image {
+        transition: background-image 1s;
     }
 
     .card-container {
